Fix blog post images on small screens

--- a/css/blog.css
+++ b/css/blog.css
@@ -986,14 +986,24 @@ figure {
     margin-bottom: 2em;
 }
 
+figure figcaption {
+    font-size: 90%;
+    text-align: center;
+}
+
 figure.center img {
     margin-left: auto;
     margin-right: auto;
 }
 
-figure figcaption {
-    font-size: 90%;
-    text-align: center;
+figure.small img {
+    max-width: 100%;
+}
+
+@media (min-width: 768px) {
+    figure.small img {
+        max-width: 300px;
+    }
 }
 
 .post-content p, .post-collection .border-box p {
